HTML updated files
Signed-off-by: paviyaa <senthilkumarjs67@gmail.com>

--- a/test-output/old/SmokeSuite/methods.html
+++ b/test-output/old/SmokeSuite/methods.html
@@ -1,38 +1,88 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>SmokeSuite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="af787b">  <td>20/06/18 05:01:43</td>   <td>0</td> <td title="&gt;&gt;ExtentReport.reportSetUp()[pri:0, instance:TS_03.ValidLogin@4f209819]">&gt;&gt;reportSetUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1390869998</td>   <td></td> </tr>
-<tr bgcolor="9f99ea">  <td>20/06/18 05:01:43</td>   <td>107</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;ValidLogin.setUp(java.lang.String, java.lang.String)[pri:0, instance:TS_03.ValidLogin@4f209819]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1390869998</td>   <td></td> </tr>
-<tr bgcolor="9f99ea">  <td>20/06/18 05:01:48</td>   <td>4728</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidLogin.test()[pri:0, instance:TS_03.ValidLogin@4f209819]">test</td> 
-  <td>main@1390869998</td>   <td></td> </tr>
-<tr bgcolor="9f99ea">  <td>20/06/18 05:02:16</td>   <td>32505</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ValidLogin.afterMethod(org.testng.ITestResult)[pri:0, instance:TS_03.ValidLogin@4f209819]">&lt;&lt;afterMethod</td> 
-<td>&nbsp;</td>  <td>main@1390869998</td>   <td></td> </tr>
-<tr bgcolor="af787b">  <td>20/06/18 05:02:16</td>   <td>32517</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ExtentReport.getResult(org.testng.ITestResult)[pri:0, instance:TS_03.ValidLogin@4f209819]">&lt;&lt;getResult</td> 
-<td>&nbsp;</td>  <td>main@1390869998</td>   <td></td> </tr>
-<tr bgcolor="9f99ea">  <td>20/06/18 05:02:16</td>   <td>32519</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ValidLogin.closeBrowser()[pri:0, instance:TS_03.ValidLogin@4f209819]">&lt;&lt;closeBrowser</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1390869998</td>   <td></td> </tr>
-<tr bgcolor="efef64">  <td>20/06/18 05:02:16</td>   <td>33181</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Usedcarschn.setUp(java.lang.String, java.lang.String)[pri:0, instance:TS_02.Usedcarschn@15eb5ee5]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1390869998</td>   <td></td> </tr>
-<tr bgcolor="efef64">  <td>20/06/18 05:02:20</td>   <td>37071</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Usedcarschn.test()[pri:0, instance:TS_02.Usedcarschn@15eb5ee5]">test</td> 
-  <td>main@1390869998</td>   <td></td> </tr>
-<tr bgcolor="efef64">  <td>20/06/18 05:02:23</td>   <td>39289</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Usedcarschn.afterMethod(org.testng.ITestResult)[pri:0, instance:TS_02.Usedcarschn@15eb5ee5]">&lt;&lt;afterMethod</td> 
-<td>&nbsp;</td>  <td>main@1390869998</td>   <td></td> </tr>
-<tr bgcolor="af787b">  <td>20/06/18 05:02:23</td>   <td>39297</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ExtentReport.getResult(org.testng.ITestResult)[pri:0, instance:TS_02.Usedcarschn@15eb5ee5]">&lt;&lt;getResult</td> 
-<td>&nbsp;</td>  <td>main@1390869998</td>   <td></td> </tr>
-<tr bgcolor="efef64">  <td>20/06/18 05:02:23</td>   <td>39297</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Usedcarschn.closeBrowser()[pri:0, instance:TS_02.Usedcarschn@15eb5ee5]">&lt;&lt;closeBrowser</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1390869998</td>   <td></td> </tr>
-<tr bgcolor="7fd0e6">  <td>20/06/18 05:02:23</td>   <td>39921</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;UpcomingRequirement.setUp(java.lang.String, java.lang.String)[pri:0, instance:TS_01.UpcomingRequirement@2145b572]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1390869998</td>   <td></td> </tr>
-<tr bgcolor="7fd0e6">  <td>20/06/18 05:02:27</td>   <td>43753</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="UpcomingRequirement.test()[pri:0, instance:TS_01.UpcomingRequirement@2145b572]">test</td> 
-  <td>main@1390869998</td>   <td></td> </tr>
-<tr bgcolor="7fd0e6">  <td>20/06/18 05:02:29</td>   <td>45705</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;UpcomingRequirement.afterMethod(org.testng.ITestResult)[pri:0, instance:TS_01.UpcomingRequirement@2145b572]">&lt;&lt;afterMethod</td> 
-<td>&nbsp;</td>  <td>main@1390869998</td>   <td></td> </tr>
-<tr bgcolor="af787b">  <td>20/06/18 05:02:29</td>   <td>45712</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ExtentReport.getResult(org.testng.ITestResult)[pri:0, instance:TS_01.UpcomingRequirement@2145b572]">&lt;&lt;getResult</td> 
-<td>&nbsp;</td>  <td>main@1390869998</td>   <td></td> </tr>
-<tr bgcolor="7fd0e6">  <td>20/06/18 05:02:29</td>   <td>45712</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;UpcomingRequirement.closeBrowser()[pri:0, instance:TS_01.UpcomingRequirement@2145b572]">&lt;&lt;closeBrowser</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1390869998</td>   <td></td> </tr>
-<tr bgcolor="af787b">  <td>20/06/18 05:02:30</td>   <td>46347</td> <td title="&lt;&lt;ExtentReport.flushReport()[pri:0, instance:TS_03.ValidLogin@4f209819]">&lt;&lt;flushReport</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1390869998</td>   <td></td> </tr>
+<tr bgcolor="af90ec">  <td>20/06/26 11:28:40</td>   <td>0</td> <td title="&gt;&gt;BeginnerClass.reportSetUp()[pri:0, instance:TS_03.ValidLogin@6c80d78a]">&gt;&gt;reportSetUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1045997582</td>   <td></td> </tr>
+<tr bgcolor="af90ec">  <td>20/06/26 11:28:42</td>   <td>1522</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BeginnerClass.setUp(java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:TS_01.UpcomingRequirement@35ef1869]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1045997582</td>   <td></td> </tr>
+<tr bgcolor="83b467">  <td>20/06/26 11:28:48</td>   <td>8135</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="UpcomingRequirement.startBrowser()[pri:0, instance:TS_01.UpcomingRequirement@35ef1869]">startBrowser</td> 
+  <td>main@1045997582</td>   <td></td> </tr>
+<tr bgcolor="af90ec">  <td>20/06/26 11:28:49</td>   <td>8558</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BeginnerClass.testResult(org.testng.ITestResult, java.lang.reflect.Method)[pri:0, instance:TS_01.UpcomingRequirement@35ef1869]">&lt;&lt;testResult</td> 
+<td>&nbsp;</td>  <td>main@1045997582</td>   <td></td> </tr>
+<tr bgcolor="83b467">  <td>20/06/26 11:28:49</td>   <td>8572</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="UpcomingRequirement.loadUpcomingBikesPage()[pri:1, instance:TS_01.UpcomingRequirement@35ef1869]">loadUpcomingBikesPage</td> 
+  <td>main@1045997582</td>   <td></td> </tr>
+<tr bgcolor="af90ec">  <td>20/06/26 11:28:50</td>   <td>9934</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BeginnerClass.testResult(org.testng.ITestResult, java.lang.reflect.Method)[pri:0, instance:TS_01.UpcomingRequirement@35ef1869]">&lt;&lt;testResult</td> 
+<td>&nbsp;</td>  <td>main@1045997582</td>   <td></td> </tr>
+<tr bgcolor="83b467">  <td>20/06/26 11:28:50</td>   <td>9942</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="UpcomingRequirement.navigateToUpcomingBikesPage()[pri:2, instance:TS_01.UpcomingRequirement@35ef1869]">navigateToUpcomingBikesPage</td> 
+  <td>main@1045997582</td>   <td></td> </tr>
+<tr bgcolor="af90ec">  <td>20/06/26 11:28:50</td>   <td>10018</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BeginnerClass.testResult(org.testng.ITestResult, java.lang.reflect.Method)[pri:0, instance:TS_01.UpcomingRequirement@35ef1869]">&lt;&lt;testResult</td> 
+<td>&nbsp;</td>  <td>main@1045997582</td>   <td></td> </tr>
+<tr bgcolor="83b467">  <td>20/06/26 11:28:50</td>   <td>10028</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="UpcomingRequirement.navigateToUpcomingBikesPage()[pri:2, instance:TS_01.UpcomingRequirement@35ef1869]">navigateToUpcomingBikesPage</td> 
+  <td>main@1045997582</td>   <td></td> </tr>
+<tr bgcolor="af90ec">  <td>20/06/26 11:28:50</td>   <td>10117</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BeginnerClass.testResult(org.testng.ITestResult, java.lang.reflect.Method)[pri:0, instance:TS_01.UpcomingRequirement@35ef1869]">&lt;&lt;testResult</td> 
+<td>&nbsp;</td>  <td>main@1045997582</td>   <td></td> </tr>
+<tr bgcolor="83b467">  <td>20/06/26 11:28:50</td>   <td>10123</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="UpcomingRequirement.navigateToUpcomingBikesPage()[pri:2, instance:TS_01.UpcomingRequirement@35ef1869]">navigateToUpcomingBikesPage</td> 
+  <td>main@1045997582</td>   <td></td> </tr>
+<tr bgcolor="af90ec">  <td>20/06/26 11:28:50</td>   <td>10297</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BeginnerClass.testResult(org.testng.ITestResult, java.lang.reflect.Method)[pri:0, instance:TS_01.UpcomingRequirement@35ef1869]">&lt;&lt;testResult</td> 
+<td>&nbsp;</td>  <td>main@1045997582</td>   <td></td> </tr>
+<tr bgcolor="83b467">  <td>20/06/26 11:28:50</td>   <td>10303</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="UpcomingRequirement.navigateToUpcomingBikesPage()[pri:2, instance:TS_01.UpcomingRequirement@35ef1869]">navigateToUpcomingBikesPage</td> 
+  <td>main@1045997582</td>   <td></td> </tr>
+<tr bgcolor="af90ec">  <td>20/06/26 11:28:50</td>   <td>10329</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BeginnerClass.testResult(org.testng.ITestResult, java.lang.reflect.Method)[pri:0, instance:TS_01.UpcomingRequirement@35ef1869]">&lt;&lt;testResult</td> 
+<td>&nbsp;</td>  <td>main@1045997582</td>   <td></td> </tr>
+<tr bgcolor="83b467">  <td>20/06/26 11:28:51</td>   <td>10828</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="UpcomingRequirement.outputDisplay()[pri:3, instance:TS_01.UpcomingRequirement@35ef1869]">outputDisplay</td> 
+  <td>main@1045997582</td>   <td></td> </tr>
+<tr bgcolor="af90ec">  <td>20/06/26 11:29:38</td>   <td>57986</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BeginnerClass.testResult(org.testng.ITestResult, java.lang.reflect.Method)[pri:0, instance:TS_01.UpcomingRequirement@35ef1869]">&lt;&lt;testResult</td> 
+<td>&nbsp;</td>  <td>main@1045997582</td>   <td></td> </tr>
+<tr bgcolor="af90ec">  <td>20/06/26 11:29:38</td>   <td>57992</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BeginnerClass.closeBrowser()[pri:0, instance:TS_01.UpcomingRequirement@35ef1869]">&lt;&lt;closeBrowser</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1045997582</td>   <td></td> </tr>
+<tr bgcolor="af90ec">  <td>20/06/26 11:29:39</td>   <td>58611</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BeginnerClass.setUp(java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:TS_02.Usedcarschn@61862a7f]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1045997582</td>   <td></td> </tr>
+<tr bgcolor="bfb7b3">  <td>20/06/26 11:29:45</td>   <td>65135</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Usedcarschn.startBrowser()[pri:0, instance:TS_02.Usedcarschn@61862a7f]">startBrowser</td> 
+  <td>main@1045997582</td>   <td></td> </tr>
+<tr bgcolor="af90ec">  <td>20/06/26 11:29:45</td>   <td>65270</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BeginnerClass.testResult(org.testng.ITestResult, java.lang.reflect.Method)[pri:0, instance:TS_02.Usedcarschn@61862a7f]">&lt;&lt;testResult</td> 
+<td>&nbsp;</td>  <td>main@1045997582</td>   <td></td> </tr>
+<tr bgcolor="bfb7b3">  <td>20/06/26 11:29:45</td>   <td>65278</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Usedcarschn.clickSearchUsedCarsFromDrpdwn()[pri:1, instance:TS_02.Usedcarschn@61862a7f]">clickSearchUsedCarsFromDrpdwn</td> 
+  <td>main@1045997582</td>   <td></td> </tr>
+<tr bgcolor="af90ec">  <td>20/06/26 11:29:47</td>   <td>67192</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BeginnerClass.testResult(org.testng.ITestResult, java.lang.reflect.Method)[pri:0, instance:TS_02.Usedcarschn@61862a7f]">&lt;&lt;testResult</td> 
+<td>&nbsp;</td>  <td>main@1045997582</td>   <td></td> </tr>
+<tr bgcolor="bfb7b3">  <td>20/06/26 11:29:47</td>   <td>67201</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Usedcarschn.navigateToUsedCarsPage()[pri:2, instance:TS_02.Usedcarschn@61862a7f]">navigateToUsedCarsPage</td> 
+  <td>main@1045997582</td>   <td></td> </tr>
+<tr bgcolor="af90ec">  <td>20/06/26 11:29:47</td>   <td>67372</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BeginnerClass.testResult(org.testng.ITestResult, java.lang.reflect.Method)[pri:0, instance:TS_02.Usedcarschn@61862a7f]">&lt;&lt;testResult</td> 
+<td>&nbsp;</td>  <td>main@1045997582</td>   <td></td> </tr>
+<tr bgcolor="bfb7b3">  <td>20/06/26 11:29:47</td>   <td>67379</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Usedcarschn.outputDisplay()[pri:3, instance:TS_02.Usedcarschn@61862a7f]">outputDisplay</td> 
+  <td>main@1045997582</td>   <td></td> </tr>
+<tr bgcolor="af90ec">  <td>20/06/26 11:29:48</td>   <td>67627</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BeginnerClass.testResult(org.testng.ITestResult, java.lang.reflect.Method)[pri:0, instance:TS_02.Usedcarschn@61862a7f]">&lt;&lt;testResult</td> 
+<td>&nbsp;</td>  <td>main@1045997582</td>   <td></td> </tr>
+<tr bgcolor="af90ec">  <td>20/06/26 11:29:48</td>   <td>67633</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BeginnerClass.closeBrowser()[pri:0, instance:TS_02.Usedcarschn@61862a7f]">&lt;&lt;closeBrowser</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1045997582</td>   <td></td> </tr>
+<tr bgcolor="af90ec">  <td>20/06/26 11:29:48</td>   <td>68248</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BeginnerClass.setUp(java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:TS_03.ValidLogin@6c80d78a]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1045997582</td>   <td></td> </tr>
+<tr bgcolor="e6fdee">  <td>20/06/26 11:29:55</td>   <td>75415</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidLogin.startBrowser()[pri:0, instance:TS_03.ValidLogin@6c80d78a]">startBrowser</td> 
+  <td>main@1045997582</td>   <td></td> </tr>
+<tr bgcolor="af90ec">  <td>20/06/26 11:29:55</td>   <td>75471</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BeginnerClass.testResult(org.testng.ITestResult, java.lang.reflect.Method)[pri:0, instance:TS_03.ValidLogin@6c80d78a]">&lt;&lt;testResult</td> 
+<td>&nbsp;</td>  <td>main@1045997582</td>   <td></td> </tr>
+<tr bgcolor="e6fdee">  <td>20/06/26 11:29:55</td>   <td>75478</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidLogin.clickLogin()[pri:1, instance:TS_03.ValidLogin@6c80d78a]">clickLogin</td> 
+  <td>main@1045997582</td>   <td></td> </tr>
+<tr bgcolor="af90ec">  <td>20/06/26 11:29:59</td>   <td>78705</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BeginnerClass.testResult(org.testng.ITestResult, java.lang.reflect.Method)[pri:0, instance:TS_03.ValidLogin@6c80d78a]">&lt;&lt;testResult</td> 
+<td>&nbsp;</td>  <td>main@1045997582</td>   <td></td> </tr>
+<tr bgcolor="e6fdee">  <td>20/06/26 11:29:59</td>   <td>78711</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidLogin.clickGoogleLogin()[pri:2, instance:TS_03.ValidLogin@6c80d78a]">clickGoogleLogin</td> 
+  <td>main@1045997582</td>   <td></td> </tr>
+<tr bgcolor="af90ec">  <td>20/06/26 11:30:02</td>   <td>81789</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BeginnerClass.testResult(org.testng.ITestResult, java.lang.reflect.Method)[pri:0, instance:TS_03.ValidLogin@6c80d78a]">&lt;&lt;testResult</td> 
+<td>&nbsp;</td>  <td>main@1045997582</td>   <td></td> </tr>
+<tr bgcolor="e6fdee">  <td>20/06/26 11:30:02</td>   <td>81795</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidLogin.switchToSigninWindow()[pri:3, instance:TS_03.ValidLogin@6c80d78a]">switchToSigninWindow</td> 
+  <td>main@1045997582</td>   <td></td> </tr>
+<tr bgcolor="af90ec">  <td>20/06/26 11:30:03</td>   <td>82839</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BeginnerClass.testResult(org.testng.ITestResult, java.lang.reflect.Method)[pri:0, instance:TS_03.ValidLogin@6c80d78a]">&lt;&lt;testResult</td> 
+<td>&nbsp;</td>  <td>main@1045997582</td>   <td></td> </tr>
+<tr bgcolor="e6fdee">  <td>20/06/26 11:30:03</td>   <td>82845</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidLogin.setValuesForSignin()[pri:4, instance:TS_03.ValidLogin@6c80d78a]">setValuesForSignin</td> 
+  <td>main@1045997582</td>   <td></td> </tr>
+<tr bgcolor="af90ec">  <td>20/06/26 11:30:05</td>   <td>84561</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BeginnerClass.testResult(org.testng.ITestResult, java.lang.reflect.Method)[pri:0, instance:TS_03.ValidLogin@6c80d78a]">&lt;&lt;testResult</td> 
+<td>&nbsp;</td>  <td>main@1045997582</td>   <td></td> </tr>
+<tr bgcolor="e6fdee">  <td>20/06/26 11:30:05</td>   <td>84567</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidLogin.outputDisplay()[pri:5, instance:TS_03.ValidLogin@6c80d78a]">outputDisplay</td> 
+  <td>main@1045997582</td>   <td></td> </tr>
+<tr bgcolor="af90ec">  <td>20/06/26 11:30:13</td>   <td>92884</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BeginnerClass.testResult(org.testng.ITestResult, java.lang.reflect.Method)[pri:0, instance:TS_03.ValidLogin@6c80d78a]">&lt;&lt;testResult</td> 
+<td>&nbsp;</td>  <td>main@1045997582</td>   <td></td> </tr>
+<tr bgcolor="af90ec">  <td>20/06/26 11:30:13</td>   <td>92889</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BeginnerClass.closeBrowser()[pri:0, instance:TS_03.ValidLogin@6c80d78a]">&lt;&lt;closeBrowser</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1045997582</td>   <td></td> </tr>
+<tr bgcolor="af90ec">  <td>20/06/26 11:30:14</td>   <td>93531</td> <td title="&lt;&lt;BeginnerClass.flush()[pri:0, instance:TS_03.ValidLogin@6c80d78a]">&lt;&lt;flush</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1045997582</td>   <td></td> </tr>
 </table>
