--- a/test-output/old/SmokeSuite/classes.html
+++ b/test-output/old/SmokeSuite/classes.html
@@ -11,7 +11,32 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>test</td>
+<td>clickLogin</td>
+<td>SmokeTest </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>setValuesForSignin</td>
+<td>SmokeTest </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>switchToSigninWindow</td>
+<td>SmokeTest </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>startBrowser</td>
+<td>SmokeTest </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>clickGoogleLogin</td>
+<td>SmokeTest </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>outputDisplay</td>
 <td>SmokeTest </td>
 </tr>
 <tr>
@@ -29,11 +54,7 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>afterMethod</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>getResult</td>
+<td>testResult</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@AfterClass</td>
@@ -41,8 +62,7 @@
 <tr>
 <td>&nbsp;</td>
 <td>closeBrowser</td>
-<td>SmokeTest </td>
-</tr>
+<td>&nbsp;</td></tr>
 <tr>
 <td>TS_01.UpcomingRequirement</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
@@ -51,7 +71,22 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>test</td>
+<td>navigateToUpcomingBikesPage</td>
+<td>SmokeTest </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>startBrowser</td>
+<td>SmokeTest </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>outputDisplay</td>
+<td>SmokeTest </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>loadUpcomingBikesPage</td>
 <td>SmokeTest </td>
 </tr>
 <tr>
@@ -69,11 +104,7 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>afterMethod</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>getResult</td>
+<td>testResult</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@AfterClass</td>
@@ -81,8 +112,7 @@
 <tr>
 <td>&nbsp;</td>
 <td>closeBrowser</td>
-<td>SmokeTest </td>
-</tr>
+<td>&nbsp;</td></tr>
 <tr>
 <td>TS_02.Usedcarschn</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
@@ -91,7 +121,22 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>test</td>
+<td>clickSearchUsedCarsFromDrpdwn</td>
+<td>SmokeTest </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>navigateToUsedCarsPage</td>
+<td>SmokeTest </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>startBrowser</td>
+<td>SmokeTest </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>outputDisplay</td>
 <td>SmokeTest </td>
 </tr>
 <tr>
@@ -109,11 +154,7 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>afterMethod</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>getResult</td>
+<td>testResult</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@AfterClass</td>
@@ -121,6 +162,5 @@
 <tr>
 <td>&nbsp;</td>
 <td>closeBrowser</td>
-<td>SmokeTest </td>
-</tr>
+<td>&nbsp;</td></tr>
 </table>
