HTML modified files
Signed-off-by: paviyaa <senthilkumarjs67@gmail.com>

--- a/test-output/old/Default suite/classes.html
+++ b/test-output/old/Default suite/classes.html
@@ -4,22 +4,18 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>TS_02.SearchusedCars</td>
+<td>TS_01.Price</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>setCityFilter</td>
+<td>clickUpcomingFromDrpdwn</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>clickSearchUsedCarsFromDrpdwn</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>navigateToUsedCarsPage</td>
+<td>selectPriceRangeLink</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
