--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,36 +1,28 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="bcb197">  <td>20/06/26 12:40:51</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SearchusedCars.clickSearchUsedCarsFromDrpdwn()[pri:1, instance:TS_02.SearchusedCars@7ed7259e]">clickSearchUsedCarsFromDrpdwn</td> 
+<tr bgcolor="bcb197">  <td>20/06/26 13:13:31</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Price.clickUpcomingFromDrpdwn()[pri:1, instance:TS_01.Price@7ed7259e]">clickUpcomingFromDrpdwn</td> 
   <td>main@1847637306</td>   <td></td> </tr>
-<tr bgcolor="9b92d7">  <td>20/06/26 12:41:15</td>   <td>23332</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BeginnerClass.closeBrowser()[pri:0, instance:TS_02.SearchusedCars@7ed7259e]">&lt;&lt;closeBrowser</td> 
+<tr bgcolor="9b92d7">  <td>20/06/26 13:13:35</td>   <td>3904</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BeginnerClass.closeBrowser()[pri:0, instance:TS_01.Price@7ed7259e]">&lt;&lt;closeBrowser</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1847637306</td>   <td></td> </tr>
-<tr bgcolor="9b92d7">  <td>20/06/26 12:41:15</td>   <td>23986</td> <td title="&lt;&lt;BeginnerClass.flush()[pri:0, instance:TS_02.SearchusedCars@7ed7259e]">&lt;&lt;flush</td> 
+<tr bgcolor="9b92d7">  <td>20/06/26 13:13:36</td>   <td>4564</td> <td title="&lt;&lt;BeginnerClass.flush()[pri:0, instance:TS_01.Price@7ed7259e]">&lt;&lt;flush</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1847637306</td>   <td></td> </tr>
-<tr bgcolor="bcb197">  <td>20/06/26 12:41:14</td>   <td>22604</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SearchusedCars.navigateToUsedCarsPage()[pri:3, instance:TS_02.SearchusedCars@7ed7259e]">navigateToUsedCarsPage</td> 
+<tr bgcolor="bcb197">  <td>20/06/26 13:13:34</td>   <td>3334</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Price.outputDisplay()[pri:3, instance:TS_01.Price@7ed7259e]">outputDisplay</td> 
   <td>main@1847637306</td>   <td></td> </tr>
-<tr bgcolor="bcb197">  <td>20/06/26 12:41:14</td>   <td>23204</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SearchusedCars.outputDisplay()[pri:4, instance:TS_02.SearchusedCars@7ed7259e]">outputDisplay</td> 
-  <td>main@1847637306</td>   <td></td> </tr>
-<tr bgcolor="9b92d7">  <td>20/06/26 12:40:41</td>   <td>-10110</td> <td title="&gt;&gt;BeginnerClass.reportSetUp()[pri:0, instance:TS_02.SearchusedCars@7ed7259e]">&gt;&gt;reportSetUp</td> 
+<tr bgcolor="9b92d7">  <td>20/06/26 13:13:24</td>   <td>-7248</td> <td title="&gt;&gt;BeginnerClass.reportSetUp()[pri:0, instance:TS_01.Price@7ed7259e]">&gt;&gt;reportSetUp</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1847637306</td>   <td></td> </tr>
-<tr bgcolor="bcb197">  <td>20/06/26 12:40:53</td>   <td>1446</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SearchusedCars.setCityFilter()[pri:2, instance:TS_02.SearchusedCars@7ed7259e]">setCityFilter</td> 
+<tr bgcolor="bcb197">  <td>20/06/26 13:13:33</td>   <td>2360</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Price.selectPriceRangeLink()[pri:2, instance:TS_01.Price@7ed7259e]">selectPriceRangeLink</td> 
   <td>main@1847637306</td>   <td></td> </tr>
-<tr bgcolor="bcb197">  <td>20/06/26 12:41:13</td>   <td>21961</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SearchusedCars.setCityFilter()[pri:2, instance:TS_02.SearchusedCars@7ed7259e]">setCityFilter</td> 
-  <td>main@1847637306</td>   <td></td> </tr>
-<tr bgcolor="9b92d7">  <td>20/06/26 12:40:43</td>   <td>-8552</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BeginnerClass.setUp(java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:TS_02.SearchusedCars@7ed7259e]">&gt;&gt;setUp</td> 
+<tr bgcolor="9b92d7">  <td>20/06/26 13:13:25</td>   <td>-5712</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BeginnerClass.setUp(java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:TS_01.Price@7ed7259e]">&gt;&gt;setUp</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1847637306</td>   <td></td> </tr>
-<tr bgcolor="bcb197">  <td>20/06/26 12:40:50</td>   <td>-1055</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SearchusedCars.startBrowser()[pri:0, instance:TS_02.SearchusedCars@7ed7259e]">startBrowser</td> 
+<tr bgcolor="bcb197">  <td>20/06/26 13:13:31</td>   <td>-133</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Price.startBrowser()[pri:0, instance:TS_01.Price@7ed7259e]">startBrowser</td> 
   <td>main@1847637306</td>   <td></td> </tr>
-<tr bgcolor="9b92d7">  <td>20/06/26 12:40:51</td>   <td>-11</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BeginnerClass.testResult(org.testng.ITestResult, java.lang.reflect.Method)[pri:0, instance:TS_02.SearchusedCars@7ed7259e]">&lt;&lt;testResult</td> 
+<tr bgcolor="9b92d7">  <td>20/06/26 13:13:31</td>   <td>-10</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BeginnerClass.testResult(org.testng.ITestResult, java.lang.reflect.Method)[pri:0, instance:TS_01.Price@7ed7259e]">&lt;&lt;testResult</td> 
 <td>&nbsp;</td>  <td>main@1847637306</td>   <td></td> </tr>
-<tr bgcolor="9b92d7">  <td>20/06/26 12:40:53</td>   <td>1435</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BeginnerClass.testResult(org.testng.ITestResult, java.lang.reflect.Method)[pri:0, instance:TS_02.SearchusedCars@7ed7259e]">&lt;&lt;testResult</td> 
+<tr bgcolor="9b92d7">  <td>20/06/26 13:13:33</td>   <td>2352</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BeginnerClass.testResult(org.testng.ITestResult, java.lang.reflect.Method)[pri:0, instance:TS_01.Price@7ed7259e]">&lt;&lt;testResult</td> 
 <td>&nbsp;</td>  <td>main@1847637306</td>   <td></td> </tr>
-<tr bgcolor="9b92d7">  <td>20/06/26 12:41:13</td>   <td>21950</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BeginnerClass.testResult(org.testng.ITestResult, java.lang.reflect.Method)[pri:0, instance:TS_02.SearchusedCars@7ed7259e]">&lt;&lt;testResult</td> 
+<tr bgcolor="9b92d7">  <td>20/06/26 13:13:34</td>   <td>3327</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BeginnerClass.testResult(org.testng.ITestResult, java.lang.reflect.Method)[pri:0, instance:TS_01.Price@7ed7259e]">&lt;&lt;testResult</td> 
 <td>&nbsp;</td>  <td>main@1847637306</td>   <td></td> </tr>
-<tr bgcolor="9b92d7">  <td>20/06/26 12:41:14</td>   <td>22597</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BeginnerClass.testResult(org.testng.ITestResult, java.lang.reflect.Method)[pri:0, instance:TS_02.SearchusedCars@7ed7259e]">&lt;&lt;testResult</td> 
-<td>&nbsp;</td>  <td>main@1847637306</td>   <td></td> </tr>
-<tr bgcolor="9b92d7">  <td>20/06/26 12:41:14</td>   <td>23198</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BeginnerClass.testResult(org.testng.ITestResult, java.lang.reflect.Method)[pri:0, instance:TS_02.SearchusedCars@7ed7259e]">&lt;&lt;testResult</td> 
-<td>&nbsp;</td>  <td>main@1847637306</td>   <td></td> </tr>
-<tr bgcolor="9b92d7">  <td>20/06/26 12:41:15</td>   <td>23326</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BeginnerClass.testResult(org.testng.ITestResult, java.lang.reflect.Method)[pri:0, instance:TS_02.SearchusedCars@7ed7259e]">&lt;&lt;testResult</td> 
+<tr bgcolor="9b92d7">  <td>20/06/26 13:13:35</td>   <td>3899</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BeginnerClass.testResult(org.testng.ITestResult, java.lang.reflect.Method)[pri:0, instance:TS_01.Price@7ed7259e]">&lt;&lt;testResult</td> 
 <td>&nbsp;</td>  <td>main@1847637306</td>   <td></td> </tr>
 </table>
